--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,59 @@
 html {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Futura, sans-serif;
 }
+
 body {
-    background-color: #A52A2A 
-        
-        
+    background-color: #40E0D0; 
+} 
+
+ H1 {
+    font-family: Andes, cursive;
+    font-size: 3rem
+}
+
+p {
+    font-family: Garamond, serif;
+    font-size: 1.1rem
+}
+
+hr {
+    border:dashed 2px;
+}
+
+img { 
+    border:solid 6px;
+}
+
+h2 {
+    font-style:italic
+    line-height: normal
+}
+
+em {
+    font-style: italic; 
+}
+
+strong {
+    font-weight: bold;
+}
+
+ul,
+ol {
+    background-color: #48D1CC
+}
+
+li {
+    color: #808080
+}
+
+ol li: first child {
+            
+
+
+
+
+
+
+
+
+
